--- a/mlops_deploy/requirements.txt
+++ b/mlops_deploy/requirements.txt
@@ -1,15 +1,16 @@
-click==7.1.1
-Flask==1.1.1
+click==8.1.3
+Flask==2.2.3
 Flask-BasicAuth==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
-joblib==0.14.1
-MarkupSafe==1.1.1
-nltk==3.4.5
-numpy==1.18.2
-scikit-learn==0.22.1
-scipy==1.4.1
-six==1.14.0
-textblob==0.15.3
-Werkzeug==1.0.1
-gunicorn==19.9.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+MarkupSafe==2.1.2
+nltk==3.8.1
+numpy==1.24.2
+regex==2022.10.31
+scikit-learn==1.0.2
+scipy==1.10.0
+textblob==0.17.1
+threadpoolctl==3.1.0
+tqdm==4.64.1
+Werkzeug==2.2.3
